--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -941,6 +941,14 @@ body > footer > .contact {
     box-sizing: border-box;
 }
 
+/******** STUDIO *********/
+article#news div {
+    /*background:#d27193;*/
+    background:#7eac32;
+    color:#fff;
+    padding: 0 10px;
+}
+
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
     body {
         width:90%;
