--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -15,12 +15,14 @@
     {%  endfor %}
 </section>
 <section class="third">
-    <article class="box">
+    <article class="box" id="news">
+        <div>
         <h1>News</h1>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
         {{ news.excerpt_html|safe|truncatewords_html:20 }}
         <p><a href="#" class="tease">Read More</a></p>
+        </div>
     </article>
 </section>
 {% endblock content %}
