--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -14,8 +14,9 @@
                          alt="{{ image.caption }}" />
                </a>
            {% endif %}
-       {% endfor %}
+        {% endfor %}
     </article>
+    {% endfor %}
 </section>
 <section class="box third">
     <h1>People</h1>
@@ -31,7 +32,8 @@
         <h1>News</h1>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
-        {{ news.excerpt_html|safe|truncatewords_html:20 }}
+        {{ news.excerpt_html|safe|trun
+        catewords_html:20 }}
         <p><a href="#" class="tease">Read More</a></p>
         </div>
     </article>
