--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -32,8 +32,7 @@
         <h1>News</h1>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
-        {{ news.excerpt_html|safe|trun
-        catewords_html:20 }}
+        {{ news.excerpt_html|safe }}
         <p><a href="#" class="tease">Read More</a></p>
         </div>
     </article>
