--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -946,6 +946,9 @@ body > footer > .contact {
 }
 
 /******** STUDIO *********/
+#studio h1:first-child {
+    margin-bottom:20px;
+}
 
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
     body {
