--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -2,7 +2,7 @@
 {% load generic_flatblocks %}
 {% block content %}
 <section class="two-thirds">
-    <article class="box">
+    <article class="box project">
         <h1>Future Green Studio</h1>
         {% for project in project_list %}
             {% for image in project.projectimage_set.all %}
