--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -3,6 +3,7 @@
 {% block content %}
 <section class="two-thirds">
     <article class="box">
+        <h1>Future Green Studio</h1>
         {% for project in project_list %}
             {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -15,6 +16,7 @@
     </article>
 </section>
 <section class="box third">
+    <h1>People</h1>
     {% for employee in employee_list %}
         <article>
         <h2>{{ employee.name }}</h2>
