--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -18,9 +18,8 @@
 <section class="box third">
     <h1>Who We Are</h1>
     {% for employee in employee_list %}
-        <article>
-        <h2>{{ employee.name }}</h2>
-        <p>{{ employee.job_title }}</p>
+        <article class="half box">
+            <img src="{{ employee.list.url }}">
         </article>
     {%  endfor %}
 </section>
