--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -19,7 +19,7 @@
     <h1>Who We Are</h1>
     {% for employee in employee_list %}
         <article class="half box">
-            <img src="{{ employee.list.url }}">
+            <img class="flex" src="{{ employee.list.url }}">
         </article>
     {%  endfor %}
 </section>
