--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -15,7 +15,7 @@
         {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/body.html" %}
     </article>
 </section>
-<section class="box third">
+<section class="third">
     <h1>Who We Are</h1>
     {% for employee in employee_list %}
         <article class="half box">
