--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="two-thirds">
     <article class="box">
-        <h1>What We Do</h1>
+        <h1>Future Green Studio</h1>
         {% for project in project_list %}
             {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -16,22 +16,22 @@
     </article>
 </section>
 <section class="third">
-    <h1>Who We Are</h1>
-    {% for employee in employee_list %}
-        <article class="half box">
-            <img style="border: 1px solid #efefef" class="flex" src="{{ employee.list.url }}">
-        </article>
-    {%  endfor %}
-</section>
-<section class="third">
     <article class="box" id="news">
         <div>
-        <h1>What We're Up To</h1>
+        <h1>News</h1>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
         {{ news.excerpt_html|safe }}
         <p><a href="#" class="tease">Read More</a></p>
         </div>
     </article>
+</section>
+<section class="third">
+    <h1>People</h1>
+    {% for employee in employee_list %}
+        <article class="half box">
+            <img style="border: 1px solid #efefef" class="flex" src="{{ employee.list.url }}">
+        </article>
+    {%  endfor %}
 </section>
 {% endblock content %}
