--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -16,7 +16,7 @@
     </article>
 </section>
 <section class="third">
-    <h1 style="margin: 0; padding: 0;">People</h1>
+    <h1 style="margin: 0;" class="box">People</h1>
     {% for employee in employee_list %}
         <article class="half box">
             <img style="border: 1px solid #efefef" class="flex" src="{{ employee.list.url }}">
