--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -18,7 +18,7 @@
 <section class="third">
     <h1 style="margin: 0;" class="box">People</h1>
     {% for employee in employee_list %}
-        <article class="half box">
+        <article class="quarter box">
             <img style="border: 1px solid #efefef" class="flex" src="{{ employee.list.url }}">
         </article>
     {%  endfor %}
