--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -248,6 +248,8 @@ body > footer > .contact {
 }
  img.flex {
      width:100%;
+     display:block;
+     display:block;
  }
 
 /********** HOMEPAGE ***********/
