--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -18,7 +18,7 @@
 <section class="third">
     <h1 style="margin: 0;" class="box">People</h1>
     {% for employee in employee_list %}
-        <article class="{% if employee.employee_type == "Principal" %}half {% else %}quarter {% endif %}{ box">
+        <article class="{% if employee.employeetype.name == "Principal" %}half {% else %}quarter {% endif %}{ box">
             <img title="{{ employee.name }}"
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
