--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -8,7 +8,7 @@
             {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
-                            <img class="flex" alt="{{ project.title }}" src="{{ image.article.url }}" /></a>
+                            <img class="flex" alt="{{ project.title }}" src="{{ image.two_thirds.url }}" /></a>
                     {% endif %}
             {%  endfor %}
         {%  endfor %}
@@ -35,6 +35,12 @@
         <h1>News</h1>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
+        {% for image in news.itemimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ news.get_absolute_url }}">
+                            <img class="flex" alt="{{ news.title }}" src="{{ image.third.url }}" /></a>
+                    {% endif %}
+        {%  endfor %}
         {{ news.excerpt_html|safe }}
         <p><a href="#" class="tease">Read More</a></p>
         </div>
