--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -8,7 +8,7 @@
             {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
-                            <img class="flex" alt="{{ project.title }}" src="{{ image.two_thirds.url }}" /></a>
+                            <img class="flex" alt="{{ project.title }}" src="{{ image.main.url }}" /></a>
                     {% endif %}
             {%  endfor %}
         {%  endfor %}
@@ -38,7 +38,7 @@
         {% for image in news.itemimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ news.get_absolute_url }}">
-                            <img class="flex" alt="{{ news.title }}" src="{{ image.third.url }}" /></a>
+                            <img class="flex" alt="{{ news.title }}" src="{{ image.aside.url }}" /></a>
                     {% endif %}
         {%  endfor %}
         {{ news.excerpt_html|safe }}
