--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -73,8 +73,8 @@
     
     {% block footer %}
     <footer>
-        <span class="copyright">&copy; {% now "Y" %} Future Green Studio</span>
-        <span class="contact">92 3rd Street Brooklyn, NY  |  718.855.8995  |  <a href="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
+        <span class="copyright">&copy; {% now "Y" %} Future Green Studio Corp.</span>
+        <span class="contact">92 3rd Street Brooklyn, NY 11231  |  t. 718.855.8995  | f. 718.855.8995 |  e. <a href="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
     </footer>
     {% endblock footer %}
 
