--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -168,6 +168,7 @@ body > footer {
 body > footer > .contact a:link,
 body > footer > .contact a:visited {
     color:#777;
+    text-decoration: none;
 }
 
 body > footer > .copyright {
