--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -302,6 +302,7 @@ body > footer > .contact {
     font-size:1.71428em;
     text-transform: uppercase;
     padding:10px 0;
+    color:#888;
 }
 
 #home article.text h1 {
