--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -17,8 +17,8 @@
 </section>
 <section class="third">
     <h1 style="margin: 0;" class="box">People</h1>
-    {% for employee in employee_list %}
-        <article class="{% if employee.employee_type.name == "Principal" %}half {% else %}quarter {% endif %}{ box">
+    {% for employee in principal_list %}
+        <article class="half box">
             <a href="#"><img title="{{ employee.name }}"
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
@@ -26,7 +26,25 @@
                  src="{{ employee.list.url }}" />
             </a> 
         </article>
-
+    {%  endfor %}
+    {% for employee in associate_list %}
+        <article class="quarter box">
+            <a href="#"><img title="{{ employee.name }}"
+                 alt="{{ employee.name }}"
+                 style="border: 1px solid #efefef"
+                 class="flex"
+                 src="{{ employee.list.url }}" />
+            </a>
+        </article>
+        {% for employee in staff_list %}
+        <article class="quarter box">
+            <a href="#"><img title="{{ employee.name }}"
+                 alt="{{ employee.name }}"
+                 style="border: 1px solid #efefef"
+                 class="flex"
+                 src="{{ employee.list.url }}" />
+            </a>
+        </article>
     {%  endfor %}
 </section>
 <section class="third">
