--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -74,7 +74,7 @@
     {% block footer %}
     <footer>
         <span class="copyright">&copy; {% now "Y" %} Future Green Studio Corp.</span>
-        <span class="contact">92 3rd Street Brooklyn, NY 11231  |  t. 718.855.8995  | f. 718.855.8995 |  e. <a href="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
+        <span class="contact">92 3rd Street Brooklyn, NY 11231  |  t. 718.855.8995  | f. 718-228-7004 |  <a href="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
     </footer>
     {% endblock footer %}
 
