editing categories css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -44,7 +44,7 @@
                     <ul class="categories">
                         {% if project.project_types.all %}
                             {% for category in project.project_types.all %}
-                                <li class="square quarter box">
+                                <li class="square">
                                     <a href="{% url portfolio_projects_by_type category.slug %}" title="{{ category.name }}" class="project-type square center">
                                         {{ category.alternate_title }}
                                     </a>
@@ -53,7 +53,7 @@
                         {% endif %}
                         {% if project.landscape_types.all %}
                             {% for category in project.landscape_types.all %}
-                                <li class="square quarter box">
+                                <li class="square">
                                     <a href="{% url portfolio_projects_by_landscape category.slug %}" title="{{ category.name }}" class="landscape-type square center">
                                         {{ category.alternate_title }}
                                     </a>
