--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -805,10 +805,10 @@ body > footer > .contact {
 
 .details .meta .categories li {
     overflow: hidden;
-    /*float:left;
-    width:20%;
+    float:left;
+    width:25%;
     padding:2px 2px 0 0;
-    margin:0;*/
+    margin:0;
     color:#fff;
     font-weight: bold;
     text-align: center;
