editing categories css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -831,7 +831,8 @@ body > footer > .contact {
 
 
 .details .meta .categories .project-type {
-    background:#d27193;
+    /*background:#d27193;*/
+    background:#63973d;
 }
 
 .details .meta .categories .landscape-type {
