--- a/futuregreen/templates/portfolio/projects_by_landscape.html
+++ b/futuregreen/templates/portfolio/projects_by_landscape.html
@@ -17,3 +17,28 @@
     </section>
  {% endblock main %}
 {% endblock content %}
+{% block js_local %}
+<script type="text/javascript">
+    function Square() {
+            $('.square').each(function(){
+                width = $(this).width();
+                $(this).css('height',width);
+            });
+            $('.center').each(function(){
+                width = $(this).width();
+                $(this).css('line-height',width + "px");
+            });
+    }
+
+
+    $(document).ready(function() {
+        Square();
+        });
+    });
+
+    $(window).resize(function() {
+        Square();
+    });
+
+</script>
+{% endblock js_local %}
