editing categories css

--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -4,7 +4,7 @@
     {% for image in project.projectimage_set.all %}
         {% if image.is_main %}
             <a href="{{ project.get_absolute_url }}">
-                <img src="{{ image.list.url }}"
+                <img class="flex" src="{{ image.list.url }}"
                      alt="{{ image.caption }}" />
             </a>
         {% endif %}
