--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -202,6 +202,10 @@ body > footer > .contact {
     width:66.66667%; float:left;
 }
 
+.five-sixths {
+    width:16.66667%; float:left;
+}
+
 .full {
     width:100%;
 }
