--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -1,20 +1,41 @@
-{% extends 'portfolio/portfolio_base.html' %}
-{% block content %}
-    {% block content_header %}
-    <header>
+{% extends 'portfolio/project_list.html' %}
+{% block content_header %}
+    <header class="square box quarter" style="background:#8ec42a;">
     {% load category_tags %}
-        <p>{% breadcrumbs category ">" %}</p>
         {% block content_title %}
-            <h1>{{ category }} Projects</h1>
+            <h1 class="square box sixth">{{ category.alternate_title }}</h1>
+            <p>{{ category.title }}</p>
         {% endblock content_title %}
    </header>
-    {% endblock content_header %}
-{% block main %}
-    <section class="project-list">
+{% endblock content_header %}
+{% block projects %}
     {% for project in category.projecttype.project_set.all %}
         {% include "portfolio/project_snippet.html" %}
     {% endfor %}
     </section>
- {% endblock main %}
-{% endblock content %}
+{% endblock projects %}
+{% block js_local %}
+<script type="text/javascript">
+    function Square() {
+            $('.square').each(function(){
+                width = $(this).width();
+                $(this).css('height',width);
+            });
+            $('.center').each(function(){
+                width = $(this).width();
+                $(this).css('line-height',width + "px");
+            });
+    }
+
+
+    $(document).ready(function() {
+        Square();
+    });
+
+    $(window).resize(function() {
+        Square();
+    });
+
+</script>
+{% endblock js_local %}
 
