--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -1,26 +1,26 @@
 {% extends "portfolio/portfolio_base.html" %}
 {% block content %}
-{% block main %}
-<section class="two-thirds">
-    {% block content_header %}
-        <header>
-            {% block content_title %}
-            <h1 class="box quarter">All Projects</h1>
-            {% endblock content_title %}
-        </header>
-    {% endblock content_header %}
-    {% block projects %}
-    <section class="project-list">
-    {% for project in project_list %}
-        {% include "portfolio/project_snippet.html" %}
-    {% endfor %}
+    {% block aside %}
+        <aside class="sixth">
+
+        </aside>
+    {% endblock aside %}
+    {% block main %}
+    <section class="five-sixths">
+        {% block content_header %}
+            <header>
+                {% block content_title %}
+                <h1 class="box quarter">All Projects</h1>
+                {% endblock content_title %}
+            </header>
+        {% endblock content_header %}
+        {% block projects %}
+        <section class="project-list">
+        {% for project in project_list %}
+            {% include "portfolio/project_snippet.html" %}
+        {% endfor %}
+        </section>
+        {% endblock projects %}
     </section>
-    {% endblock projects %}
-</section>
-{% endblock main %}
-{% block aside %}
-    <aside class="third">
-    
-    </aside>
-{% endblock aside %}
+    {% endblock main %}
 {% endblock content %}
