editing categories css

--- a/futuregreen/templates/portfolio/projects_by_landscape.html
+++ b/futuregreen/templates/portfolio/projects_by_landscape.html
@@ -1,9 +1,9 @@
 {% extends 'portfolio/project_list.html' %}
 {% block content_header %}
-    <header class="square box quarter" style="background:#8ec42a;">
+    <header style="background:#8ec42a;">
     {% load category_tags %}
         {% block content_title %}
-            <h1 class="square box sixth">{{ category.alternate_title }}</h1>
+            <h1 class="square box full">{{ category.alternate_title }}</h1>
             <p>{{ category.title }}</p>
         {% endblock content_title %}
    </header>
