editing project listing pages

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -186,6 +186,10 @@ body > footer > .contact {
     width:16.66667%; float:left;
 }
 
+.fifth {
+    width:20%; float:left;
+}
+
 .quarter {
     width:25%; float:left;
 }
