--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -1,4 +1,4 @@
-<article class="box quarter">
+<article class="box fifth">
     <header style="display:none;"><h1>{{ project.name }}</h1></header>
     <section>
         {% for image in project.projectimage_set.all %}
