--- a/futuregreen/templates/portfolio/projects_by_landscape.html
+++ b/futuregreen/templates/portfolio/projects_by_landscape.html
@@ -3,8 +3,10 @@
     <header class="square box full">
     {% load category_tags %}
         {% block content_title %}
-            <h1 style="background:#8ec42a;">{{ category.alternate_title }}</h1>
-            <p>{{ category.name }}</p>
+            <div class="square box" style="background:#8ec42a;">
+                <h1>{{ category.alternate_title }}</h1>
+                <p>{{ category.name }}</p>
+            </div>
         {% endblock content_title %}
    </header>
 {% endblock content_header %}
