editing project listing pages

--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -3,7 +3,7 @@
     <header class="square box full">
     {% load category_tags %}
         {% block content_title %}
-            <div class="square box full" style="background:#8ec42a;">
+            <div class="box" style="background:#8ec42a; width:100%; height:100%;">
                 <h1>{{ category.alternate_title }}</h1>
                 <p>{{ category.name }}</p>
             </div>
